--- a/IELTS_PROJECT/src/main/java/Exams/Exam2.form
+++ b/IELTS_PROJECT/src/main/java/Exams/Exam2.form
@@ -77,13 +77,13 @@
                                   </Group>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="cbb1" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      <Component id="cbb2" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      <Component id="cbb3" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Component id="txtQ8" alignment="0" min="-2" pref="241" max="-2" attributes="0"/>
                                       <Component id="txtQ9" alignment="0" min="-2" pref="241" max="-2" attributes="0"/>
                                       <Component id="txtQ3" alignment="0" min="-2" pref="241" max="-2" attributes="0"/>
                                       <Component id="txtQ4" alignment="0" min="-2" pref="241" max="-2" attributes="0"/>
+                                      <Component id="txtQ5" min="-2" pref="241" max="-2" attributes="0"/>
+                                      <Component id="txtQ6" min="-2" pref="241" max="-2" attributes="0"/>
+                                      <Component id="txtQ7" min="-2" pref="241" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -127,17 +127,17 @@
                       <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="cbb1" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtQ5" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="cbb2" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtQ6" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabel7" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="cbb3" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtQ7" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -186,7 +186,7 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jLabel13">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Question 13"/>
+        <Property name="text" type="java.lang.String" value="Question 26"/>
       </Properties>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel1">
@@ -281,33 +281,33 @@
     </Container>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Question 1"/>
+        <Property name="text" type="java.lang.String" value="Question 14"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtQ13">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Question 2"/>
+        <Property name="text" type="java.lang.String" value="Question 15"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtQ12">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Question 3"/>
+        <Property name="text" type="java.lang.String" value="Question 16"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtQ11">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Question 4"/>
+        <Property name="text" type="java.lang.String" value="Question 17"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel5">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Question 5"/>
+        <Property name="text" type="java.lang.String" value="Question 18"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtQ1">
@@ -316,69 +316,27 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel6">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Question 6"/>
+        <Property name="text" type="java.lang.String" value="Question 19"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtQ3">
     </Component>
-    <Component class="javax.swing.JComboBox" name="cbb1">
-      <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="3">
-            <StringItem index="0" value="True"/>
-            <StringItem index="1" value="False"/>
-            <StringItem index="2" value="Not Given"/>
-          </StringArray>
-        </Property>
-      </Properties>
-      <AuxValues>
-        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
-      </AuxValues>
-    </Component>
     <Component class="javax.swing.JTextField" name="txtQ4">
-    </Component>
-    <Component class="javax.swing.JComboBox" name="cbb2">
-      <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="3">
-            <StringItem index="0" value="True"/>
-            <StringItem index="1" value="False"/>
-            <StringItem index="2" value="Not Given"/>
-          </StringArray>
-        </Property>
-      </Properties>
-      <AuxValues>
-        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
-      </AuxValues>
     </Component>
     <Component class="javax.swing.JTextField" name="txtQ8">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel7">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Question 7"/>
+        <Property name="text" type="java.lang.String" value="Question 20"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtQ9">
-    </Component>
-    <Component class="javax.swing.JComboBox" name="cbb3">
-      <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="3">
-            <StringItem index="0" value="True"/>
-            <StringItem index="1" value="False"/>
-            <StringItem index="2" value="Not Given"/>
-          </StringArray>
-        </Property>
-      </Properties>
-      <AuxValues>
-        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
-      </AuxValues>
     </Component>
     <Component class="javax.swing.JTextField" name="txtQ10">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel8">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Question 8"/>
+        <Property name="text" type="java.lang.String" value="Question 21"/>
       </Properties>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
@@ -398,23 +356,29 @@
     </Container>
     <Component class="javax.swing.JLabel" name="jLabel9">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Question 9"/>
+        <Property name="text" type="java.lang.String" value="Question 22"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel10">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Question 10"/>
+        <Property name="text" type="java.lang.String" value="Question 23"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel11">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Question 11"/>
+        <Property name="text" type="java.lang.String" value="Question 24"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel12">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Question 12"/>
+        <Property name="text" type="java.lang.String" value="Question 25"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="txtQ5">
+    </Component>
+    <Component class="javax.swing.JTextField" name="txtQ6">
+    </Component>
+    <Component class="javax.swing.JTextField" name="txtQ7">
     </Component>
   </SubComponents>
 </Form>
